# kbase_protein_search_module

./: .gitignore  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  deploy.cfg  kbase.yml  kbase_protein_network_analysis_toolkit.spec  pyproject.toml
data/families/: family_0.h5  family_1.h5  family_10.h5  family_11.h5  family_12.h5  family_13.h5  family_14.h5  family_15.h5  family_16.h5  family_17.h5  family_18.h5  family_19.h5  family_2.h5  family_20.h5  family_21.h5  family_22.h5  family_23.h5  family_24.h5  family_25.h5  family_26.h5  family_27.h5  family_28.h5  family_29.h5  family_3.h5  family_30.h5  family_31.h5  family_32.h5  family_33.h5  family_34.h5  family_35.h5  family_36.h5  family_37.h5  family_38.h5  family_39.h5  family_4.h5  family_40.h5  family_41.h5  family_42.h5  family_43.h5  family_44.h5  (+10 more)
data/metadata/: family_0_metadata.parquet  family_10_metadata.parquet  family_11_metadata.parquet  family_12_metadata.parquet  family_13_metadata.parquet  family_14_metadata.parquet  family_15_metadata.parquet  family_16_metadata.parquet  family_17_metadata.parquet  family_18_metadata.parquet  family_19_metadata.parquet  family_1_metadata.parquet  family_20_metadata.parquet  family_21_metadata.parquet  family_22_metadata.parquet  family_23_metadata.parquet  family_24_metadata.parquet  family_25_metadata.parquet  family_26_metadata.parquet  family_27_metadata.parquet  family_28_metadata.parquet  family_29_metadata.parquet  (+28 more)
lib/: README.md
scripts/: entrypoint.sh  generate_dummy_data.py  prepare_deploy_cfg.py  run_async.sh
test/: run_tests.sh
ui/: README.md
(+14 files in other folders)
